--- a/bof3ext/bof3ext.vcxproj.filters
+++ b/bof3ext/bof3ext.vcxproj.filters
@@ -105,6 +105,24 @@
     <ClCompile Include="src\text_manager.ixx">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\bof3\texture.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\hooks\gui_skilllist_hooks.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bof3\skill.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\config_manager.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\math.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\hooks\gui_start_hooks.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\bof3\audio.hpp">
