Some refactoring, more widescreen fixes, translations, and inventory scrolling fix.

--- a/bof3ext/bof3ext.vcxproj
+++ b/bof3ext/bof3ext.vcxproj
@@ -164,6 +164,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /Y "$(TargetPath)" "D:\Games\Breath of Fire III"</Command>
